--- a/django_basico3/templates_html/base.html
+++ b/django_basico3/templates_html/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt">
 
@@ -11,7 +12,7 @@
   <title>Template Bootstrap</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'paginas/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
 </head>
 
@@ -27,19 +28,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="/">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobre</a>
+            <a class="nav-link" href="/sobre">Sobre</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Serviços</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contato</a>
-          </li>
+
         </ul>
       </div>
     </div>
@@ -49,14 +45,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        {%block 'conteudo'%}{%endblock%}
+        {%block conteudo%}{%endblock%}
       </div>
     </div>
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'paginas/vendor/jquery/jquery.slim.min.js' %}"></script>
+  <script src="{% static 'paginas/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 </body>
 
